--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -12,6 +12,7 @@
 .restaurant_pic {
   width: 400px;
   height: 400px;      /* TODO: make responsive */
+  border-radius: 20px;
   object-fit: cover;
   object-position: center;
 }
