--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -18,16 +18,26 @@
 }
 
 .restaurant_card_header_container {
-  padding: 0px 10px;
+  max-width: 370px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
-.restaurant_card_header_container h2,
-.restaurant_card_header_container h3 {
+.restaurant_card_header_container h2 {
+  flex-grow: 1;
+  margin: 0 10px 0 0;
+  font-size: 1.2em;
+  font-weight: bold;
+  word-wrap: break-word;
+  max-width: calc(100% - 100px);
+}
+
+.restaurant_card_header_container h4 {
   margin: 0;
+  white-space: nowrap;
+  flex-shrink: 0;
 }
 
 .restaurant_card_icon_container {
