--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,8 +1,10 @@
 .restaurant_card {
-  max-width: 100vw;
-  max-height: 100vh;
+  position: absolute; /* Absolute positioning required for stacking */
+  min-height: 600px;
+  max-width: 500px;
+  margin: 5vh auto 0 auto;
   background-color: #FEFEFC;
-  border-radius: 20px;
+  border-radius: 25px;
   border: solid 3px #9FA4A9;
   padding-bottom: 10px;
   padding-bottom: 10px;
@@ -46,7 +48,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 50px;
+  padding: 20px 50px;
 }
 
 .restaurant_icon {
