--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -61,15 +61,33 @@
 }
 
 .dislike_icon {
-  color: #fd5e51;
+  color: rgb(253, 94, 81);
 }
 
 .like_icon {
-  color: #60D48B;
+  color: #60d48b;
 }
 
 .restaurant_card_exit_animation {
   transform: translateX(-100%);
   opacity: 0;
   transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.like_icon_overlay,
+.dislike_icon_overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 400px;
+}
+
+.like_icon_overlay {
+  color: rgba(96, 212, 139, 0.67);
+}
+
+.dislike_icon_overlay {
+  color: rgba(253, 94, 81, 0.67);
 }
