--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root {
+  /* Default values for larger screens */
+  --card-width: 400px;
+}
+
+/* For screens smaller than 480px */
+@media (max-width: 400px) {
+  :root {
+    --card-width: 100vw;
+  }
+
+  #root {
+    margin: 0px;
+  }
+}
+
+.chakra-ui-light {
+  min-width: auto;
+}
+
 #root {
   max-width: 100vw;
-  margin: 0 auto;
   font-family: Roboto;
   font-weight: 100;
+  overflow-x: hidden;
 }
 
 .app_container {
   height: 100vh;
-  width: 407px;
+  left: 50%; /* Center the card horizontally */
+  width: var(--card-width);
   padding: 0px 2px;
   background-color: #FEFEFC;
   border-radius: 5px;
