--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,12 +3,14 @@
 :root {
   /* Default values for larger screens */
   --card-width: 400px;
+  --body-margin: 0px auto;
 }
 
-/* For screens smaller than 480px */
+/* For smaller screens */
 @media (max-width: 400px) {
   :root {
     --card-width: 100vw;
+    --body-margin: 0px auto;
   }
 
   #root {
@@ -18,10 +20,12 @@
 
 .chakra-ui-light {
   min-width: auto;
+  margin: var(--body-margin);
 }
 
 #root {
   max-width: 100vw;
+  margin: var(--body-margin);
   font-family: Roboto;
   font-weight: 100;
   overflow-x: hidden;
@@ -29,7 +33,7 @@
 
 .app_container {
   height: 100vh;
-  left: 50%; /* Center the card horizontally */
+  margin: var(--body-margin);
   width: var(--card-width);
   padding: 0px 2px;
   background-color: #FEFEFC;
