--- a/src/styles/Match.css
+++ b/src/styles/Match.css
@@ -2,8 +2,34 @@
 
 .match_text {
   font-family: "Rouge Script", cursive;
+  text-align: center;
   font-weight: 400;
   font-style: normal;
   color: white;
   font-size: 120px !important;
+  padding: 0;
+}
+
+@media (max-width: 538px) {
+  .match_text {
+    font-size: 100px !important;
+  }
+}
+
+@media (max-width: 454px) {
+  .match_text {
+    font-size: 90px !important;
+  }
+}
+
+@media (max-width: 413px) {
+  .match_text {
+    font-size: 80px !important;
+  }
+}
+
+@media (max-width: 372px) {
+  .match_text {
+    font-size: 70px !important;
+  }
 }
