Added a dynamic drag activation threshold. It feels that small and large screens should activate at different thresholds (relative to screen width)

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -21,7 +21,7 @@
   padding-bottom: 10px;
   padding-bottom: 10px;
   color: #4A4A48;
-  touch-action: pan-y pan-x;
+  touch-action: none;
   user-select: none;
 }
 
